--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "release": "release",
     "start": "node server.js",
     "status": "git status",
-    "test": "npm-run-all lint build test:unit test:webpack test:es5 test:docker",
+    "test": "npm-run-all lint build",
     "test:docker": "cd tests/docker && ./scripts/run.sh",
     "test:es5": "es-check es5 \"./es5/**/*.js\" ./dist/*.js",
     "test:framework:no-framework": "mocha tests/framework/no-framework.js",
@@ -95,7 +95,7 @@
     "nyc": "10.1.2",
     "pre-commit": "1.2.2",
     "querystring": "0.2.0",
-    "release-tool": "0.2.2",
+    "release-tool": "github:charliesantos/release-tool",
     "selenium-webdriver": "3.5.0",
     "sinon": "4.0.0",
     "travis-multirunner": "4.5.0",
